# speech-mllm-training-free-rl

./: .gitattributes  .gitignore  README.md  pyproject.toml
_repro/: README.md  asr_bon_llamacpp_snr5.json  asr_bon_v2_clean.json  asr_bon_v2_snr5.json  asr_bon_v2_snr5.smoke_n4.json  asr_bon_v2_snr5_noise2.json  asr_bon_v2_snr5_noise_replication.json  coverage_bridge_v1.json  cp1_multimodal_feature_audited_mmau.json  cp1_slu_hprompt_minds14.json  cp1_sqa_hprompt_mmau.json  cp3_selector_realization_mmau.json  dec_synthesis.json  e10_verifier.json  e10b_control.json  e7_fewshot.json  e8_promptopt.json  kb_content_inventory_20260712.json  m3_crossmodal.json  m3_crossmodal.validity.yaml  m3_phase0_selection.json  m3_phase0_zero_support.json  m5_confirmatory_slice_ids.json  m5_memo_censuses.json  m5_selector_confirmatory.json  m5_selector_dev.json  p2_baselines.json  p6_perception_delta.json  probe_hprompt_vs_hfix.json  redraw_manifest.NONLOCKED.md  redraw_manifest.json  t0_consumption_probe.json  t10_proto_agentic_2turn.json  t2_taskdef_fewshot.json  t3_iterative_promptopt.json  t6_compression_feasibility.json  t7_errata.md  t7_rag_gate_probe.json  t7_rag_gate_probe.validity.yaml  t8_clean_rag_rerun.json  (+2 more)
configs/: config.yaml
docs/: TESTING.md
scripts/: _inspect_kb.py  check_assets.sh  check_env.sh  coverage_bridge.py  cp1_multimodal_conditioning_mmau.py  cp1_multimodal_feature_audited_mmau.py  cp1_slu_hprompt_minds14.py  cp1_sqa_hprompt_mmau.py  cp3_selector_anatomy.py  cp3_selector_realization_mmau.py  dec_synthesis.py  e10b_control.py  eval.sh  gpu_session.sh  (+26 more)
(+541 files in other folders)
